--- a/src/styles/common/_grid.scss
+++ b/src/styles/common/_grid.scss
@@ -42,6 +42,8 @@
     .g4,
     .g6,
     .g8 {
+        max-width: 100%;
+
         @media all and (-ms-high-contrast: none) {
             padding: $spacing-sml;
         }
